tgthrProgramManagement/force-app/main/default/objects/Code__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>ICD-10-CM Codes</description>
    <inlineHelpText>ICD-10-CM Codes linked to the Code/Diagnosis</inlineHelpText>
    <label>Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>