tgthrProgramManagement/force-app/main/default/objects/Code__c/fields/ICD10Code__c.field-meta.xml
<CustomField>
    <fullName>ICD10Code__c</fullName>
    <label>ICD-10 Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>