tgthrProgramManagement/force-app/main/default/objects/Code__c/fields/Primary_Diagnosis_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Primary_Diagnosis_Eligible__c</fullName>
    <description>Can this Code be set as a Primary Diagnosis and be billed as primary?  Used in filter on Care Plan</description>
    <inlineHelpText>Can this Code be set as a Primary Diagnosis and be billed as primary?</inlineHelpText>
    <label>Primary Diagnosis Eligible?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>